# smartpatch_basestation_software

./: .gitignore  Dockerfile  LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt  run.py  setup.py
.github/workflows/: pytest.yml  pytest_poetry.yml
AdditionalFunctionality/: SmartPatchSimulator.py  ThingsboardApiTools.py  ThingsboardSetup.py  __init__.py
AdditionalFunctionality/Setup_Data/: example_basestations.csv  patients.csv
AdditionalFunctionality/thingsboard_templates/dashboard_templates/: smartpatch_dashboard.json
Basestation/: Basestation.py  Ble.py  DataProcessing.py  Globals.py  Mapping.py  Output.py  PublishToThingsboard.py  SaveLocally.py  Settings.py  __init__.py
Logs/BackupData/: backup.md
Logs/RawData/: raw.md
Logs/Runtime/: runtime.md
doc/: base-station-v1.html  index.html  search.js
doc/base-station-v1/: AdditionalFunctionality.html  Basestation.html  run.html
doc/base-station-v1/AdditionalFunctionality/: SmartPatchSimulator.html  ThingsboardApiTools.html  ThingsboardSetup.html
doc/base-station-v1/Basestation/: Basestation.html  Ble.html  DataProcessing.html  Globals.html  Mapping.html  Output.html  PublishToThingsboard.html  SaveLocally.html  Settings.html
tests/: test_dummy.py  test_dummy_2.py
