[tool.poetry]
name = "Basestation"
version = "1.0.0"
description = ""
authors = ["cyrillknecht"]

[tool.poetry.dependencies]
python = "3.8.x"
bleak = "==0.13.0"
art = ">=5.3"
termcolor = "==1.1.0"
tqdm = "==4.62.3"
paho-mqtt = "==1.6.1"
numpy = "==1.21.5"
tb-rest-client = {version = "*", optional = false}
tb-mqtt-client = {version = "*", optional = false}
heartpy = "~1.2.7"
scipy = "==1.7.3"
matplotlib = ">=3.3.4"
pytest = "==7.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
